--- a/weekly-plan/index.html
+++ b/weekly-plan/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline">计算机爱好者联盟</h2>
       <a href="https://github.com/UCE-group/weekly-plan" target="_blank" class="btn">GitHub</a>
       <a href="https://raw.githubusercontent.com/UCE-group/weekly-plan/master/weekly-plan.pdf" target="_blank" class="btn">PDF</a>
-      <a href="#" class="btn">WP 导航</a>
+      <a href="./nav.html" class="btn">WP 导航</a>
     </section>
 
     <section class="main-content">
@@ -65,10 +65,11 @@
       <li>进入本组对应repo中提交Issues
 
       <ul>
-      <li>美工组（视觉设计）：https://github.com/UCE-group/weekly-art/issues</li>
-      <li>APP组（Android、iOS）：https://github.com/UCE-group/weekly-mobile/issues</li>
-      <li>编程组：https://github.com/UCE-group/weekly-program/issues</li>
-      <li>网站组：https://github.com/UCE-group/weekly-web/issues</li>
+      
+      <li>美工组（视觉设计）：<a href="https://github.com/UCE-group/weekly-art/issues">https://github.com/UCE-group/weekly-art/issues</a></li>
+      <li>APP组（Android、iOS）：<a href="https://github.com/UCE-group/weekly-mobile/issues">https://github.com/UCE-group/weekly-mobile/issues</a></li>
+      <li>编程组：<a href="https://github.com/UCE-group/weekly-program/issues">https://github.com/UCE-group/weekly-program/issues</a></li>
+      <li>网站组：<a href="https://github.com/UCE-group/weekly-web/issues">https://github.com/UCE-group/weekly-web/issues</a></li>
       </ul></li>
       <li>点击按钮 <code>New issue</code> ，每两周每人一个 issue</li>
       <li>Title：标题格式如:  <code>【WP】2017年春期-第5-6周-姓名</code>  （上学期为秋期，下学期为春期） </li>
@@ -87,7 +88,7 @@
       <p>3、<strong>master周日前</strong>将成员个人WP<strong>汇总整理</strong>为【<strong>小组WP</strong>】发送至：（<strong>3个地方</strong>）</p>
 
       <ul>
-      <li><strong>Github</strong>（以Issues的形式提交）https://github.com/UCE-group/weekly-plan/issues
+      <li><strong>Github</strong>（以Issues的形式提交）<a href="https://github.com/UCE-group/weekly-plan/issues">https://github.com/UCE-group/weekly-plan/issues</a>
 
       <ul>
       <li>点击按钮 <code>New issue</code>，每周每组一个Issue</li>
@@ -104,7 +105,7 @@
       <p>将自己最近学到的内容整理成一篇文章，经过排版，检查无误后，整理发送至两个地方</p>
 
       <ul>
-      <li><strong>Github</strong>（以Wiki的形式提交）https://github.com/UCE-group/weekly-plan/wiki
+      <li><strong>Github</strong>（以Wiki的形式提交）<a href="https://github.com/UCE-group/weekly-plan/wiki">https://github.com/UCE-group/weekly-plan/wiki</a>
 
       <ul>
       <li>点击按钮 <code>New Page</code> ，每次每个方向一个Page</li>
