--- a/weekly-plan/index.html
+++ b/weekly-plan/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <h1 id="toc_0">计算机爱好者联盟 - Weekly Plan (WP)  <a href="#"><code>web</code></a> <a href="https://raw.githubusercontent.com/UCE-group/weekly-plan/master/weekly-plan.pdf"><code>pdf</code></a></h1>
+      <h1 id="toc_0">计算机爱好者联盟 - Weekly Plan (WP)  <a href="http://buct-uce.github.io/weekly-plan"><code>web</code></a> <a href="https://raw.githubusercontent.com/UCE-group/weekly-plan/master/weekly-plan.pdf"><code>pdf</code></a></h1>
 
       <p><a href="https://github.com/UCE-group/weekly-plan"><code>Master</code></a> <a href="https://github.com/UCE-group/weekly-art"><code>美工组</code></a> <a href="https://github.com/UCE-group/weekly-mobile"><code>APP组</code></a>  <a href="https://github.com/UCE-group/weekly-program"><code>编程组</code></a> <a href="https://github.com/UCE-group/weekly-web"><code>网站组</code></a></p>
 
